syntax = "proto3";
package umee.uibc.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/umee-network/umee/v4/x/uibc";

// Params of x/uibc module
message Params {
  // quota_status defines the wethever quota check enabled, disbaled for inflow and outlfow.
  IBCTransferQuotaStatus quota_status = 1;
  // total_quota defines the total outflow limit of ibc-transfer in USD
  string total_quota = 2 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // token_quota defines the outflow limit per token in USD
  string token_quota = 3 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // quota_duration defines quota expires for each ibc-transfer denom in seconds
  google.protobuf.Duration quota_duration = 4 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag)     = "quota_duration,omitempty",
    (gogoproto.moretags)    = "yaml:\"quota_duration\""
  ];
}

// QuotaStatus status of ibc-transfer quota check for inflow and outflow
enum IBCTransferQuotaStatus {
  // UNSPECIFIED  defines a no-op status.
  STATUS_UNSPECIFIED = 0;
  // DISABLED: all quota checks are disabled.
  QUOTA_DISABLED = 1;
  // ENABLED: all quota checks are enabled.
  QUOTA_ENABLED = 2;
  // DISABLED OUT: quota outflow checks are disabled and inflows are enabled.
  QUOTA_OUT_DISABLED = 3;
  // DISABLED IN: quota inflow checks are disabled and outflows are enabled.
  QUOTA_IN_DISABLED = 4;
}
